feat(api): make project update params nullable and add account usernames
