# apps/api/internal/entities/account/account.go
@@ -12,5 +12,18 @@ type Account struct {
 
 	shared.IntegerID
 	UserId uuid.UUID `json:"user_id"`
+	UsernameField
 	shared.Timestamps
+}
+
+type CreateAccountParams struct {
+	bun.BaseModel `bun:"table:accounts"`
+	
+	UsernameField
+}
+
+type UpdateAccountParams struct {
+	bun.BaseModel `bun:"table:accounts"`
+
+	*UsernameField
 }
