# apps/api/internal/entities/account/type.go
@@ -1,0 +1,5 @@
+package account
+
+type UsernameField struct {
+	Username string `json:"username" minLength:"3" maxLength:"50"`
+}
